syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.pipelineframework.csv.grpc";
option java_outer_classname = "OrchestratorProto";

package orchestrator;

// The orchestrator service definition.
service OrchestratorService {
  // Processes a CSV folder
  rpc Process (ProcessRequest) returns (ProcessResponse);
}

// The request message containing the CSV folder path.
message ProcessRequest {
  string csv_folder_path = 1;
}

// The response message indicating the processing result.
message ProcessResponse {
  bool success = 1;
  string message = 2;
}