syntax = "proto3";

option java_package = "org.pipelineframework.csv.grpc";

import "payment_status_svc.proto";

message CsvPaymentsOutputFile {
  string id = 1;
  string filepath = 2;
  string csvFolderPath = 3;
}

service ProcessCsvPaymentsOutputFileService {
  rpc remoteProcess(stream PaymentOutput) returns (CsvPaymentsOutputFile);
}
